# DomainMapper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.ini  custom-dns-list.txt  pyproject.toml  services.json  Запустить.bat
src/domainmapper/: __init__.py  config.py  formatter.py  history.py  main.py  resolver.py  services.py
